Production/Platform/alarm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alarm-ingress
  namespace: terrestrialplatform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: terrestrial.cloud
      http:
        paths:
          - path: /alarm/(.*)
            pathType: Prefix

            backend:

              service:

                name: alarm-service

                port:

                  number: 8003
